<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.skgif.doi</groupId>
  <artifactId>puma-skg-if-api</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
    <quarkus.platform.version>3.38.1</quarkus.platform.version>
    <openapi-generator.version>7.24.0</openapi-generator.version>
    <jackson-databind-nullable.version>0.2.6</jackson-databind-nullable.version>
    <surefire-plugin.version>3.5.2</surefire-plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>${quarkus.platform.group-id}</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.platform.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-rest</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-rest-jackson</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-rest-client</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-rest-client-jackson</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-smallrye-openapi</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-arc</artifactId>
    </dependency>
    <dependency>
      <groupId>org.openapitools</groupId>
      <artifactId>jackson-databind-nullable</artifactId>
      <version>${jackson-databind-nullable.version}</version>
    </dependency>
    <dependency>
      <groupId>jakarta.validation</groupId>
      <artifactId>jakarta.validation-api</artifactId>
    </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-junit5</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-junit-mockito</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>${quarkus.platform.group-id}</groupId>
        <artifactId>quarkus-maven-plugin</artifactId>
        <version>${quarkus.platform.version}</version>
        <extensions>true</extensions>
        <executions>
          <execution>
            <goals>
              <goal>build</goal>
              <goal>generate-code</goal>
              <goal>generate-code-tests</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.openapitools</groupId>
        <artifactId>openapi-generator-maven-plugin</artifactId>
        <version>${openapi-generator.version}</version>
        <executions>
          <execution>
            <id>generate-skgif-models</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <inputSpec>src/main/openapi/skg-if-openapi.yaml</inputSpec>
              <generatorName>jaxrs-spec</generatorName>
              <library>quarkus</library>
              <generateApis>true</generateApis>
              <generateModelTests>false</generateModelTests>
              <generateApiTests>false</generateApiTests>
              <apiPackage>org.skgif.doi.generated.api</apiPackage>
              <modelPackage>org.skgif.doi.generated.model</modelPackage>
              <configOptions>
                <interfaceOnly>true</interfaceOnly>
                <useTags>true</useTags>
                <useJakartaEe>true</useJakartaEe>
                <useOneOfInterfaces>true</useOneOfInterfaces>
              </configOptions>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <id>add-openapi-generated-sources</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-sources/openapi/src/gen/java</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire-plugin.version}</version>
        <configuration>
          <systemPropertyVariables>
            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
          </systemPropertyVariables>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.26.0</version>
        <configuration>
          <!--
            compileSourceRoots (not sourceDirectories - that parameter doesn't exist on this
            plugin's pmd/check goals and was silently ignored here for a long time; confirmed via
            the official parameter list at
            https://maven.apache.org/plugins-archives/maven-pmd-plugin-3.26.0/pmd-mojo.html) is the
            real parameter for main-source scoping. It has always defaulted to
            ${project.compileSourceRoots} anyway, so this override was a no-op even under the wrong
            name - kept explicit here for clarity now that the name is correct.
          -->
          <compileSourceRoots>
            <compileSourceRoot>${project.build.sourceDirectory}</compileSourceRoot>
          </compileSourceRoots>
          <testSourceRoots>
            <testSourceRoot>${project.build.testSourceDirectory}</testSourceRoot>
          </testSourceRoots>
          <excludeRoots>
            <excludeRoot>${project.build.directory}/generated-sources/openapi/src/gen/java</excludeRoot>
          </excludeRoots>
          <!--
            includeTests=true here does NOT mean test code gets the same rules as main: it just
            makes both source roots available for PMD to scan in this one execution.
            pmd-ruleset.xml and pmd-ruleset-tests.xml each carry their own <exclude-pattern> (main
            excludes test files, tests excludes main files), so which rules apply to which source
            root is governed by that file-pattern scoping, not by having two separate executions.
            A genuine two-execution split (one config for main, another for test) was tried first
            and doesn't work: the check goal forks its own analysis via the pmd goal, and that fork
            always uses this plugin-level default <configuration>, ignoring per-<execution>
            overrides entirely (confirmed with `mvn -X pmd:check@<id>` showing the forked pmd goal
            still using this block's compileSourceRoots/rulesets no matter which execution
            triggered it) - a real limitation of maven-pmd-plugin 3.26.0's check-forks-pmd
            architecture, not a configuration mistake.
          -->
          <includeTests>true</includeTests>
          <rulesets>
            <ruleset>pmd-ruleset.xml</ruleset>
            <ruleset>pmd-ruleset-tests.xml</ruleset>
          </rulesets>
          <skip>${skipTests}</skip>
          <failOnViolation>true</failOnViolation>
        </configuration>
        <executions>
          <execution>
            <id>pmd-check</id>
            <phase>process-sources</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
          <sourceDirectories>
            <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
          </sourceDirectories>
          <includeTestSourceDirectory>false</includeTestSourceDirectory>
          <propertyExpansion>checkstyle.methodname.format=^[a-z][a-zA-Z0-9]*$</propertyExpansion>
          <skip>${skipTests}</skip>
          <failOnViolation>true</failOnViolation>
          <violationSeverity>warning</violationSeverity>
        </configuration>
        <executions>
          <execution>
            <id>javadoc-tag-check</id>
            <phase>process-sources</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
          <execution>
            <!--
              Same checkstyle.xml ruleset as the main execution above, run against
              src/test/java. The only difference is the MethodName pattern: this execution's
              propertyExpansion loosens it to allow the project's
              methodUnderTest_scenario_expectedResult test-naming convention, which the
              default camelCase-only pattern used for src/main/java would otherwise reject.
            -->
            <id>test-checkstyle-check</id>
            <phase>process-test-sources</phase>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <sourceDirectories combine.self="override">
                <sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
              </sourceDirectories>
              <includeTestSourceDirectory>true</includeTestSourceDirectory>
              <propertyExpansion>checkstyle.methodname.format=^[a-z][a-zA-Z0-9]*(_[a-zA-Z0-9]+)*$</propertyExpansion>
              <skip>${skipTests}</skip>
              <failOnViolation>true</failOnViolation>
              <violationSeverity>warning</violationSeverity>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
